[package]
name = "new-issue-airtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-flows = "0.1.9"
chrono = "0.4.24"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.1"
github-flows = "0.4.0"
http = "0.2.9"
http_req_wasi = "0.10.2"
schedule-flows = "0.1.10"
serde = "1.0.159"
serde_json = "1.0.93"
serde_urlencoded = "0.7.1"
slack-flows = "0.2.6"
store-flows = "0.2.1"
tokio_wasi = "1.25.1"
